--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,6 +11,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Verify Files
+        run: |
+          ls -la
+          cat Dockerfile  # Verify Dockerfile content
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -23,5 +28,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/my-app:${{ github.sha }}
+            ${{ secrets.DOCKER_HUB_USERNAME }}/your-repo-name:latest
+            ${{ secrets.DOCKER_HUB_USERNAME }}/your-repo-name:${{ github.sha }}
